--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=java-banking-app
 spring.datasource.url=jdbc:mysql://localhost:3306/bank
-spring.datasource.username=root
-spring.datasource.password=springstudent
+spring.datasource.username=username
+spring.datasource.username=username
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=bankappprovider@gmail.com
-spring.mail.password=xkfqeucwoirdxiqf
+spring.mail.username=username@gmail.com
+spring.mail.username=username
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
