--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=java-banking-app
-spring.datasource.url=jdbc:mysql://localhost:3306/bank
-spring.datasource.username=username
-spring.datasource.username=username
+spring.datasource.url=jdbc:mysql://localhost:3306/sourcedb
+spring.datasource.username=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=username@gmail.com
-spring.mail.username=username
+spring.mail.port=465
+spring.mail.username=bankappprovider@gmail.com
+spring.mail.password=xkfqeucwoirdxiqf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
 
+app.jwt-secret=256token
+app.jwt-expiration=a day in ms
